<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <include layout="@layout/common_header"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/y584"
        android:background="@color/color_yellow_1">

        <RelativeLayout
            android:layout_width="@dimen/x180"
            android:layout_height="@dimen/y180"
            android:layout_centerInParent="true"
            android:background="@drawable/shape_circle">

            <ImageView
                android:layout_width="@dimen/x140"
                android:layout_height="@dimen/y140"
                android:layout_centerInParent="true"
                android:background="@mipmap/logo"
                android:src="@mipmap/logo"/>
        </RelativeLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/x30"
        android:layout_marginStart="@dimen/x30"
        android:layout_marginTop="-80pt"
        android:background="@drawable/shape_loading_dialog"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/y20"
            android:layout_marginEnd="@dimen/x30"
            android:layout_marginStart="@dimen/x30"
            android:layout_marginTop="@dimen/y20"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/x32"
                android:layout_height="@dimen/y32"
                android:src="@mipmap/login_user_icon"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/x20"
                android:text="@string/phone_num"
                android:textColor="@color/color_black_2"
                android:textSize="@dimen/text_size_24"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/x20"
                android:layout_weight="1"
                android:background="@null"
                android:cursorVisible="false"
                android:maxLines="1"
                android:textSize="@dimen/text_size_24"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/y1"
            android:background="@color/item_line_1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/y20"
            android:layout_marginEnd="@dimen/x30"
            android:layout_marginStart="@dimen/x30"
            android:layout_marginTop="@dimen/y20"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/x32"
                android:layout_height="@dimen/y32"
                android:src="@mipmap/login_user_icon"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/x20"
                android:text="@string/password"
                android:textColor="@color/color_black_2"
                android:textSize="@dimen/text_size_24"/>

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/x20"
                android:layout_weight="1"
                android:background="@null"
                android:cursorVisible="false"
                android:maxLines="1"
                android:textSize="@dimen/text_size_24"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/login_bt"
        style="@style/btn_red"
        android:layout_marginEnd="@dimen/x30"
        android:layout_marginStart="@dimen/x30"
        android:layout_marginTop="@dimen/y50"
        android:text="@string/login"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/x30"
        android:layout_marginStart="@dimen/x30"
        android:layout_marginTop="@dimen/y50">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/x20"
            android:text="@string/register_now"
            android:textColor="@color/color_black_2"
            android:textSize="@dimen/text_size_24"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="@dimen/x20"
            android:text="@string/forget_pwd"
            android:textColor="@color/color_black_2"
            android:textSize="@dimen/text_size_24"/>
    </RelativeLayout>
</LinearLayout>