<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="@dimen/y98"
              android:background="@color/color_white_1"
              android:elevation="@dimen/y5"
              android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/y1"
        android:background="@color/item_line_1"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/y98"
        android:gravity="center_vertical"
        android:orientation="horizontal">


        <LinearLayout
            android:id="@+id/ll_home"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_home"
                android:layout_width="@dimen/x32"
                android:layout_height="@dimen/y32"
                android:scaleType="fitXY"
                android:src="@mipmap/home_unselect"/>

            <TextView
                android:id="@+id/tv_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/y8"
                android:includeFontPadding="false"
                android:text="@string/home"
                android:textColor="@color/color_black_1"
                android:textSize="@dimen/text_size_28"/>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_globalvillage"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_globalvillage"
                android:layout_width="@dimen/x32"
                android:layout_height="@dimen/y32"
                android:scaleType="fitXY"
                android:src="@mipmap/globalaillage_unselect"/>

            <TextView
                android:id="@+id/tv_globalvillage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/y8"
                android:text="@string/globalvillage"
                android:textColor="@color/color_black_1"
                android:textSize="@dimen/text_size_28"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_community"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_community"
                android:layout_width="@dimen/x32"
                android:layout_height="@dimen/y32"
                android:scaleType="fitXY"
                android:src="@mipmap/community_unselect"/>

            <TextView
                android:id="@+id/tv_community"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/y8"
                android:text="@string/community"
                android:textColor="@color/color_black_1"
                android:textSize="@dimen/text_size_28"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_shopping_cart"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_shopping_cart"
                android:layout_width="@dimen/x32"
                android:layout_height="@dimen/y32"
                android:scaleType="fitXY"
                android:src="@mipmap/shopping_cart_unselect"/>

            <TextView
                android:id="@+id/tv_shopping_cart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/y8"
                android:text="@string/shopping_cart"
                android:textColor="@color/color_black_1"
                android:textSize="@dimen/text_size_28"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_member"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_member"
                android:layout_width="@dimen/x32"
                android:layout_height="@dimen/y32"
                android:scaleType="fitXY"
                android:src="@mipmap/member_unselect"/>

            <TextView
                android:id="@+id/tv_member"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/y8"
                android:text="@string/member"
                android:textColor="@color/color_black_1"
                android:textSize="@dimen/text_size_28"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
